  - Added new RVV adler32 implementations.

* RAID improvements:
  - Added new x86 AVX2+GFNI and AVX512+GFNI pq_gen implementations.
  - Added new RVV xor_gen, pq_gen implementations.

* Erasure coding improvements:
  - Added new RVV ec_encode_data, gf_vect_dot_prod, gf_vect_mul implementations.

* Zero-memory detection improvements:
  - Added new RVV implementations.

v2.31

* API changes:
  - gf_vect_mul_base() function now returns an integer, matching the return type
    of gf_vect_mul() function (not a breaking change).

* Igzip compression improvements:
  - Added compress/decompress with dictionary to perf test app.
  - Zlib header can be now created on the fly when starting the compression.
  - Added isal_zlib_hdr_init() function to initialize the zlib header to 0.

* Zero-memory detection improvements:
  - Optimized AVX implementation.
  - Added new AVX2 and AVX512 implementations.

* Erasure coding improvements:
  - Added new AVX512 and AVX2 implementations using GFNI instructions.
  - Added new SVE implementation.

* CRC improvements:
  - Added new CRC64 Rocksoft algorithm.
  - CRC x86 implementations optimized using ternary logic instructions and
    folding of bigger data on the last bytes.
  - CRC16 T10dif aarch64 implementation improved.
  - CRC aarch64 implementations optimized using XOR fusion feature.

* Documentation:
  - Added function overview documentation page.
  - Added security file.

* Performance apps:
  - Changed performance tests to warm by default.

* Example apps:
  - Added CRC combine example `crc_combine_example` for multiple polynomials.

v2.30

* Igzip compression enhancements.
  - New functions for dictionary acceleration. Split dictionary processing and
    resetting can greatly accelerate the performance of compressing many small
    files with a dictionary.
  - New static level 0 header decode tables. Accelerates decompressing small
    files that are level 0 compressed by skipping the known header parsing.